(lang dune 3.8)

(using melange 0.1)

(using directory-targets 0.1)

(name remix-example-movies)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/remix-example-movies-cloudflare-reason)

(bug_reports
 https://github.com/psb/remix-example-movies-cloudflare-reason/issues)

(package
 (allow_empty)
 (name remix-example-movies)
 (synopsis "remix-example-movies")
 (description "remix-example-movies"))
