opam-version: "2.0"
synopsis: "remix-example-movies"
description: "remix-example-movies"
maintainer: ["Paul Bacchus"]
authors: ["Paul Bacchus"]
license: "MIT"
homepage: "https://github.com/psb/remix-example-movies-cloudflare-reason"
bug-reports: "https://github.com/psb/remix-example-movies-cloudflare-reason/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "3.0.0"}
  "reason-react" {>= "0.14.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "ocamlformat" {= "0.26.1"}
]
dev-repo: "git+https://github.com/psb/remix-example-movies-cloudflare-reason.git"
